DDF-2773: Increase commons test coverage (#75)
- Refactor common test classes into own artifact
- Remove snapshot build from travis.
- Unquiet logs